--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -11334,7 +11334,7 @@
     </unit>
     <unit id="4NEM2QG" name="Du hast %item_list% in der Werkstatt zu %item% umgewandelt.">
       <notes>
-        <note category="german">Du hast %item_list% in der Werkstatt zu %item% umgewandelt.</note>
+        <note category="german">Du hast ein(e,n) %item% hergestellt. Der Gegenstand wurde in der Bank abgelegt.&lt;hr /&gt;Du hast dafür &lt;strong&gt;%ap% Aktionspunkt(e)&lt;/strong&gt; verbraucht.</note>
       </notes>
       <segment>
         <source>Du hast %item_list% in der Werkstatt zu %item% umgewandelt.</source>
@@ -19328,6 +19328,60 @@
       <segment>
         <source>Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</source>
         <target>Alle zu bearbeitenden Gegenstände müssen direkt in der Bank deponiert werden.</target>
+      </segment>
+    </unit>
+    <unit id="zFzJH3x">
+      <notes>
+        <note category="german">Die Bürger haben das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</note>
+      </notes>
+      <segment>
+        <source>Die Bürger haben das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</source>
+        <target><![CDATA[Die Bürger haben das Haus von <strong>✝ %citizen%</strong> vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...]]></target>
+      </segment>
+    </unit>
+    <unit id="pQTisuC">
+      <notes>
+        <note category="german">Die Bürger haben das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %list%.</note>
+      </notes>
+      <segment>
+        <source>Die Bürger haben das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %list%.</source>
+        <target><![CDATA[Die Bürger haben das Haus von <strong>✝ %citizen%</strong> vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %list%.]]></target>
+      </segment>
+    </unit>
+    <unit id="HX0f8s0">
+      <notes>
+        <note category="german">Du hast das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert.</note>
+      </notes>
+      <segment>
+        <source>Du hast das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert.</source>
+        <target><![CDATA[Du hast das Haus von <strong>✝ %citizen%</strong> vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert.]]></target>
+      </segment>
+    </unit>
+    <unit id="JUftyHl" name="Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %item_list%">
+      <notes>
+        <note category="german">Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %item_list%</note>
+      </notes>
+      <segment>
+        <source>Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %item_list%</source>
+        <target>Die Stadt hat zudem folgende Resourcen zurückgewinnen können: %item_list%</target>
+      </segment>
+    </unit>
+    <unit id="QDOrNez">
+      <notes>
+        <note category="german">Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</note>
+      </notes>
+      <segment>
+        <source>Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</source>
+        <target>Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</target>
+      </segment>
+    </unit>
+    <unit id="PXIV0Uu">
+      <notes>
+        <note category="german">Du hast &lt;strong&gt;1AP&lt;/strong&gt; aufgewendet, um das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; zu recyclen. Die Arbeiten sind noch nicht abgeschlossen...</note>
+      </notes>
+      <segment>
+        <source>Du hast &lt;strong&gt;1AP&lt;/strong&gt; aufgewendet, um das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; zu recyclen. Die Arbeiten sind noch nicht abgeschlossen...</source>
+        <target><![CDATA[Du hast <strong>1AP</strong> aufgewendet, um das Haus von <strong>✝ %citizen%</strong> zu recyclen. Die Arbeiten sind noch nicht abgeschlossen...]]></target>
       </segment>
     </unit>
   </file>
