ES Translations related to poison (1)

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -18813,7 +18813,7 @@
       </notes>
       <segment>
         <source>Du hast nichts, womit du %poison% kombinieren kannst. Du benötigst einen der folgenden Gegenstände:&lt;br /&gt;%list_head% oder %list_tail%.</source>
-        <target><![CDATA[Du hast nichts, womit du %poison% kombinieren kannst. Du benötigst einen der folgenden Gegenstände:<br />%list_head% oder %list_tail%.]]></target>
+        <target><![CDATA[No puedes combinar %poison% con esto. Puedes hacerlo con uno de estos objetos:<br />%list_head% o %list_tail%.]]></target>
       </segment>
     </unit>
     <unit id="91d4rG_" name="Du kannst keine Gegenstände verstecken, solange jemand zuschaut ...">
