EN Translation related to poison

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -18819,7 +18819,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Du hast nichts, womit du %poison% kombinieren kannst. Du benötigst einen der folgenden Gegenstände:&lt;br /&gt;%list_head% oder %list_tail%.</source>
-        <target><![CDATA[Du hast nichts, womit du %poison% kombinieren kannst. Du benötigst einen der folgenden Gegenstände:<br />%list_head% oder %list_tail%.]]></target>
+        <target><![CDATA[You cannot combine %poison% with this. You can do this with one of the following objects:<br />%list_head% or %list_tail%.]]></target>
       </segment>
     </unit>
     <unit id="91d4rG_" name="Du kannst keine Gegenstände verstecken, solange jemand zuschaut ...">
