--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -3152,5 +3152,14 @@
         <target>Parrainage</target>
       </segment>
     </unit>
+    <unit id="LzzllLx" name="Empfänger">
+      <notes>
+        <note category="german">Empfänger</note>
+      </notes>
+      <segment>
+        <source>Empfänger</source>
+        <target>Empfänger</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
