EN Translations related to group management

--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3238,7 +3238,7 @@
       </notes>
       <segment>
         <source>Gruppen</source>
-        <target>Gruppen</target>
+        <target>Groups</target>
       </segment>
     </unit>
     <unit id="OFylvr8" name="Anon.">
@@ -3256,7 +3256,7 @@
       </notes>
       <segment>
         <source>Mitglieder</source>
-        <target>Mitglieder</target>
+        <target>Members</target>
       </segment>
     </unit>
     <unit id="TTOMzoJ" name="Mitglied">
@@ -3265,7 +3265,7 @@
       </notes>
       <segment>
         <source>Mitglied</source>
-        <target>Mitglied</target>
+        <target>Member</target>
       </segment>
     </unit>
     <unit id="Kz_5uSy" name="Die Mitgliederliste ist versteckt.">
@@ -3274,7 +3274,7 @@
       </notes>
       <segment>
         <source>Die Mitgliederliste ist versteckt.</source>
-        <target>Die Mitgliederliste ist versteckt.</target>
+        <target>The list of members is hidden</target>
       </segment>
     </unit>
     <unit id="zAjLutF" name="Neue Gruppe">
@@ -3283,7 +3283,7 @@
       </notes>
       <segment>
         <source>Neue Gruppe</source>
-        <target>Neue Gruppe</target>
+        <target>New group</target>
       </segment>
     </unit>
     <unit id="BbvwyR3" name="Gruppe &quot;%group%&quot;">
@@ -3292,7 +3292,7 @@
       </notes>
       <segment>
         <source>Gruppe "%group%"</source>
-        <target>Gruppe "%group%"</target>
+        <target>Group "%group%"</target>
       </segment>
     </unit>
     <unit id="tMAiZYW" name="Gruppe">
@@ -3301,7 +3301,7 @@
       </notes>
       <segment>
         <source>Gruppe</source>
-        <target>Gruppe</target>
+        <target>Group</target>
       </segment>
     </unit>
     <unit id="6SYvAH3" name="Beschreibung">
@@ -3310,7 +3310,7 @@
       </notes>
       <segment>
         <source>Beschreibung</source>
-        <target>Beschreibung</target>
+        <target>Decription</target>
       </segment>
     </unit>
     <unit id="7Cc8BkZ" name="Anonyme Gruppe">
@@ -3319,7 +3319,7 @@
       </notes>
       <segment>
         <source>Anonyme Gruppe</source>
-        <target>Anonyme Gruppe</target>
+        <target>Anonymous group</target>
       </segment>
     </unit>
     <unit id="1uiWprE" name="Neue Gruppe anlegen">
@@ -3328,7 +3328,7 @@
       </notes>
       <segment>
         <source>Neue Gruppe anlegen</source>
-        <target>Neue Gruppe anlegen</target>
+        <target>Create a new group</target>
       </segment>
     </unit>
   </file>
