Added "Akt." translation (FR)

--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -2230,7 +2230,7 @@
       </notes>
       <segment>
         <source>Akt.</source>
-        <target>Akt.</target>
+        <target>Act.</target>
       </segment>
     </unit>
     <unit id="lzLlEpR" name="Nummer">
