--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -2212,7 +2212,7 @@
       </notes>
       <segment>
         <source>Akt.</source>
-        <target>Akt.</target>
+        <target>Act.</target>
       </segment>
     </unit>
     <unit id="lzLlEpR" name="Nummer">
