Typo fix in the FR help

--- a/translations/help.fr.xlf
+++ b/translations/help.fr.xlf
@@ -340,7 +340,7 @@
       </notes>
       <segment>
         <source>Neue Gebäude bauen</source>
-        <target>Contruire de nouveau bâtiments</target>
+        <target>Contruire de nouveaux bâtiments</target>
       </segment>
     </unit>
     <unit id="iOrKXGN" name="Baupläne">
