--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -664,7 +664,7 @@
       </notes>
       <segment>
         <source>Du kannst von hier aus die Stadt verlassen und die Außenwelt erkunden. Vergiss aber nicht, um Mitternacht das Tor zu schließen!</source>
-        <target>Puedes salir del pueblo y explorar el Ultramundo desde aquí. Sobre todo, ¡no olvides cerrar el Gran Portal antes del ataque nocturno!</target>
+        <target><![CDATA[Puedes salir del pueblo y explorar el Ultramundo desde aquí. Sobre todo, ¡no olvides cerrar el <strong>Gran Portal</strong> antes del ataque nocturno!]]></target>
       </segment>
     </unit>
     <unit id="UgTjBPn" name="Du wurdest verbannt und kannst daher das Stadttor weder öffnen noch schließen.">
