Fix button name for hiding objects (FR)

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -9779,7 +9779,7 @@
       </notes>
       <segment>
         <source>Rucksack verstecken</source>
-        <target>Enterrer son sac</target>
+        <target>Cacher tous mes objets</target>
       </segment>
     </unit>
     <unit id="F71fElc">
