--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -660,7 +660,7 @@
     </unit>
     <unit id="dizwCRc">
       <notes>
-        <note category="german">Du kannst von hier aus die Stadt verlassen und die Außenwelt erkunden. Vergiss aber nicht, um Mitternacht das Tor zu schließen!</note>
+        <note category="german">Du kannst von hier aus die Stadt verlassen und die Außenwelt erkunden. Vergiss aber nicht, um Mitternacht das &lt;strong&gt;Tor&lt;/strong&gt; zu schließen!</note>
       </notes>
       <segment>
         <source>Du kannst von hier aus die Stadt verlassen und die Außenwelt erkunden. Vergiss aber nicht, um Mitternacht das Tor zu schließen!</source>
@@ -19283,7 +19283,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     </unit>
     <unit id="tA.qFY5">
       <notes>
-        <note category="german">In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</note>
+        <note category="german">In der Werkstatt können &lt;strong&gt;Materialien&lt;/strong&gt; zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</note>
       </notes>
       <segment>
         <source>In der Werkstatt können Materialien zu brauchbaren Hilfsmitteln verarbeitet werden, die für bestimmte Gebäude und Konstruktionen in der Stadt notwendig sind.</source>
@@ -19351,6 +19351,15 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <segment>
         <source>Du hast &lt;strong&gt;1AP&lt;/strong&gt; aufgewendet, um das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; zu recyclen. Die Arbeiten sind noch nicht abgeschlossen...</source>
         <target><![CDATA[You use <strong>1AP</strong> to dismantle <strong>✝ %citizen%</strong>'s house. There's still more work to be done...]]></target>
+      </segment>
+    </unit>
+    <unit id="zWIGzsD">
+      <notes>
+        <note category="german">Beachte: Behälter wie Rucksack, Einkaufswagen etc. werden nicht in der Bank abgelegt.</note>
+      </notes>
+      <segment>
+        <source>Beachte: Behälter wie Rucksack, Einkaufswagen etc. werden nicht in der Bank abgelegt.</source>
+        <target>Note: Containers (such as a rucksack, trolley, etc...) will not automatically be placed in the bank.</target>
       </segment>
     </unit>
   </file>
