--- a/translations/soul.en.xlf
+++ b/translations/soul.en.xlf
@@ -3193,7 +3193,7 @@
       </notes>
       <segment>
         <source>Empfänger</source>
-        <target>Empfänger</target>
+        <target>Receiver</target>
       </segment>
     </unit>
   </file>
