--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -3158,7 +3158,7 @@
       </notes>
       <segment>
         <source>Empfänger</source>
-        <target>Empfänger</target>
+        <target>Destinataire</target>
       </segment>
     </unit>
   </file>
