--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -19305,7 +19305,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Die Bürger haben das Haus von &lt;strong&gt;✝ %citizen%&lt;/strong&gt; vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</source>
-        <target><![CDATA[Die Bürger haben das Haus von <strong>✝ %citizen%</strong> vollständig zerlegt. Alle Gegenstände aus dessen Truhe wurden in der Bank deponiert. Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...]]></target>
+        <target><![CDATA[The cítizens have finished dismantling <strong>✝ %citizen%</strong>'s house! All objects found in their house have been deposited in the bank. The town didn't recover anything useful from their house, there was really nothing of interest to take...]]></target>
       </segment>
     </unit>
     <unit id="pQTisuC">
@@ -19341,7 +19341,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</source>
-        <target>Die Stadt hat nichts Nützliches aus dem Haus herausbekommen, da war wirklich nichts zu holen...</target>
+        <target>The town didn't recover anything useful from their house, there was really nothing of interest to take...</target>
       </segment>
     </unit>
     <unit id="PXIV0Uu">
