Typo fix for Sawdust steak FR decription

--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -5488,7 +5488,7 @@
       </notes>
       <segment>
         <source>Man nehme eine Scheibe Fleisch, paniere das Ganze mit Sägemehl und streue anschließend einige Holzstücke darüber... et Voilà! Im Holz scheinen auch einige Holzwürmer gewesen zu sein, denn das Ding hört nicht auf sich zu bewegen.</source>
-        <target>Une tranche de viande recouverte de sciure et de copeaux de bois... A moins que ce ne soit pas des copeaux, mais des vers à bois, ce qui semblerait logique puisque ca n'arrête de pas de bouger.</target>
+        <target>Une tranche de viande recouverte de sciure et de copeaux de bois... A moins que ce ne soit pas des copeaux, mais des vers à bois, ce qui semblerait logique puisque ça n'arrête pas de bouger.</target>
       </segment>
     </unit>
     <unit id="2vmNmP2">
