--- a/translations/ghost.de.xlf
+++ b/translations/ghost.de.xlf
@@ -751,7 +751,7 @@
       </notes>
       <segment>
         <source>Beginne ein neues Leben in der Welt der Verdammten une versuche, so lang wie möglich zu überleben. Wer weiß, ws dich in dieser neuen Stadt erwarten wird?</source>
-        <target>Beginne ein neues Leben in der Welt der Verdammten une versuche, so lang wie möglich zu überleben. Wer weiß, ws dich in dieser neuen Stadt erwarten wird?</target>
+        <target>Beginne ein neues Leben in der Welt der Verdammten und versuche, so lang wie möglich zu überleben. Wer weiß, was dich in dieser neuen Stadt erwarten wird?</target>
       </segment>
     </unit>
     <unit id="Knuuneb" name="Karten-Seed">
